[gd_scene load_steps=7 format=2]

[ext_resource path="res://Monster_bee.gd" type="Script" id=1]
[ext_resource path="res://assets/LPC Base Assets/sprites/monsters/bee_tiles/tile007.png" type="Texture" id=2]
[ext_resource path="res://assets/speech_bubble2.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/pf_tempesta_five_compressed.ttf" type="DynamicFontData" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 14.5615

[sub_resource type="DynamicFont" id=2]

size = 13
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Bee" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="speech_bubble" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( 28.8443, -38.465 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Label" type="Label" parent="speech_bubble" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -21.0
margin_top = -23.0
margin_right = 23.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Excuse
me"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="bubble_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="bubble_timer" to="." method="_on_bubble_timer_timeout"]


